Update the title

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Navigateur distant iPad</title>
+<title>ChromiPad – Remote browser for legacy iPads</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
